[package]
name = "current"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.9.1", features = ["derive"] }
glam = "0.20.5"
image = "0.24.2"
indexmap = "1.8.2"
paste = "1.0.7"
pollster = "0.2.5"
wgpu = "0.12.0"
winit = "0.26.1"
