[package]
name = "current"
description = "A Rust 2D game library built off WGPU"
license = "MIT"
version = "0.3.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.9.1", features = ["derive"] }
glam = "0.20.5"
image = "0.24.2"
indexmap = "1.8.2"
kira = { version = "0.6.0", features = ["flac"] }
paste = "1.0.7"
pollster = "0.2.5"
text-to-png = { version = "0.2.0", git = "https://github.com/itsfarseen/text-to-png" } 
wgpu = "0.12.0"
winit = "0.26.1"
